--- a/app/views/users/registrations/_confirm.html.erb
+++ b/app/views/users/registrations/_confirm.html.erb
@@ -51,7 +51,7 @@
         </tr>
         <tr>
           <th>その他(持ち級など)</th>
-          <td><%= user.introduction %></td>
+          <td><%= safe_join(user.introduction.split("\n"),tag(:br)) %></td>
         </tr>
         <tr>
           <th>パスワード</th>
