--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -11,9 +11,9 @@
           <th>募集状況</th>
           <td>
             <% if @user.is_active %>
-              【<font color="green">募集中</font>】
+              【<span style="color: green;">募集中</span>】
             <% else %>
-              【<font color="gray">募集終了</font>】
+              【<span style="color: gray;">募集終了</span>】
             <% end %>
           </td>
         </tr>
