--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -69,7 +69,7 @@
             <% end %>
           </li>
           <li class="nav-item">
-            <%= link_to user_favorites_path(@user), class: "btn" do %>
+            <%= link_to favorites_user_path(@user), class: "btn" do %>
               <i class="fas fa-heart fa-lg"></i> いいね一覧
             <% end %>
           </li>
